--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ repositories {
 
 dependencies {
     testCompile("org.assertj:assertj-core:3.14.0")
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testCompile('org.junit.jupiter:junit-jupiter:5.6.0')
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
 
